# accio-manager

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: build-linux-onefile.yml
accio_panel/: __init__.py  anthropic_proxy.py  api_logs.py  app_settings.py  client.py  config.py  dashboard_views.py  gemini_proxy.py  model_catalog.py  model_catalog_cache.py  models.py  mysql_storage.py  openai_proxy.py  panel_routes.py  persistence.py  proxy_api_routes.py  proxy_cache.py  proxy_selection.py  quota_scheduler.py  store.py  upstream_support.py  usage_stats.py  utils.py  web.py  web_bulk_delete_extension.py
accio_panel/proxy_routes/: __init__.py  anthropic.py  context.py  gemini.py  openai.py  shared.py
accio_panel/templates/: callback.html  dashboard.html  dashboard_public.html  detail.html  oauth.html  settings.html
docs/superpowers/plans/: 2026-04-04-mysql-config-account-storage.md
scripts/: validate_release_tag.py
tests/: benchmark_proxy_selection.py  test_api_logs.py  test_client_generate_content.py  test_dashboard_views.py  test_proxy_routing.py  test_proxy_selection.py  test_proxy_shared.py  test_release_build.py  test_runtime_storage.py  test_tool_config_mapping.py  test_upstream_message_id.py  test_upstream_support.py  test_upstream_turn_error.py
