[project]
name = "accio"
dynamic = ["version"]
description = "Accio 多账号管理面板"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "itsdangerous>=2.2.0",
    "jinja2>=3.1.4",
    "PyMySQL>=1.1.1",
    "PySocks>=1.7.1",
    "requests>=2.32.3",
    "uvicorn>=0.30.6",
    "python-dotenv>=1.0.0",
]

[project.scripts]
accio-panel = "accio_panel.web:run"

[build-system]
requires = ["hatchling>=1.25.0", "hatch-vcs>=0.4.0"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["accio_panel"]

[tool.hatch.build.targets.sdist]
include = [
    "/accio_panel",
    "/main.py",
    "/README.md",
    "/pyproject.toml",
]
